# Pagtingin-to-Highway

./: .gitignore  CMakeLists.txt  JOURNAL.md  PagtinginFinal.csv  Pagtingin_Final_BOM - Pagtingin_Final.csv  Pagtingin_Final_BOM - Pagtingin_Final.csv.csv  README.md
CAD Design/light-gray-geometrical-shape-decorated-banner/: v859-katie-41.eps
CADDesign/: Glasses Frame.step  Left casing.step  Right Casing.step  Right Enclosure.step  left Enclosure.step
ESP32 Prototype/Software/Examples/Pagtingin/: CMakeLists.txt
ESP32 Prototype/Software/Prototype code/main/: CMakeLists.txt  main.c  main.h  todo.md
ESP32 Prototype/Software/Prototype code/src/: CMakeLists.txt  alert.h  main.c  main.h
ESP32 Prototype/Unit Testing/Audio system/: CMakeLists.txt
PCB/: Pagtingin_Final_Panelized.kicad_pcb  Pagtingin_Final_Panelized.kicad_prl  Pagtingin_Final_Panelized.kicad_pro
PCB/Pagtingin Gerber Panelized/: combined.gbl  combined.gbo  combined.gbp  combined.gbs  combined.gm1  combined.gtl  combined.gto  combined.gtp  combined.gts  combined.txt  combined_blended_outline.GKO
Pico Prototype/src/: CMakeLists.txt  main.c  main.h
PicoPrototype/src/: main.uf2
PicoPrototype/utils/: Raspberry Pi Pico PWM Wave File Converter.py
Unit Testing/Audio system/: CMakeLists.txt  README.md
Unit Testing/Audio system/main/: main.c  main.h
Unit Testing/Combined Test/: CMakeLists.txt  README.md
Unit Testing/Combined Test/main/: CMakeLists.txt  main.c  main.h
Unit Testing/TOF Sensor Check/: CMakeLists.txt  README.md
Unit Testing/TOF Sensor Check/main/: main.c  main.h
(+8 files in other folders)
